crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__projects_groups__projects_list__json.snap
---
source: crates/engram-cli/tests/cli/snapshot/projects_groups.rs
expression: f.run(& all)
---
$ engramdb --no-maintenance --dir [PROJECT] --format json projects list
exit: 0
--- stdout ---
[
  {
    "exists": true,
    "project_id": "[PROJECT_ID]",
    "project_path": "[PROJECT]"
  }
]
--- stderr ---
