crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__projects_groups__projects_list__plain.snap
---
source: crates/engram-cli/tests/cli/snapshot/projects_groups.rs
expression: f.run(& all)
---
$ engramdb --no-maintenance --dir [PROJECT] --format plain projects list
exit: 0
--- stdout ---
[SHORT_PROJECT_ID] [PROJECT] (ok)
--- stderr ---
